--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/2.create-job-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/2.create-job-oracle.md
@@ -59,7 +59,7 @@ destination_name    IN  VARCHAR2 DEFAULT 'null');
 | number_of_argument | 指定作业所需的参数数量。该参数的取值范围为 \[0,255\]，默认值为 0。   |
 | program_name       | 与此作业关联的程序的名称。如果程序类型为 `EXECUTABLE`，则作业所有者必须拥有 `CREATE EXTERNAL JOB` 权限，才能启用或运行作业。   |
 | start_date         | 指定此作业计划首次执行的日期和时间。如果 `start_date` 和 `repeat_interval` 为空，那么该作业一旦启用就会运行。 对于使用日历表达式指定重复间隔的重复作业，`start_date` 用作参考日期。当作业第一次满足日历表达式的时间执行时，该时间必须是当前时间或者当前时间之后的时间。 由于系统可能超载二造成资源不可用，所以 Scheduler 不能保证作业的执行时间是精确的。|
-| repeat_interval    | 指定作业重复的频率。可以使用日历表达式或 PL 表达式指定重复间隔。通过对指定的表达式求值，来确定作业下次运行的时间。如果未指定 `repeat_interval`，则作业仅在指定的开始日期运行一次。**说明** 该参数设置空会报错，但不影响功能使用。  |
+| repeat_interval    | 指定作业重复的频率。可以使用日历表达式或 PL 表达式指定重复间隔。通过对指定的表达式求值，来确定作业下次运行的时间。如果未指定 `repeat_interval`，则作业仅在指定的开始日期运行一次。<br> **说明** 该参数设置空会报错，但不影响功能使用。</br>   |
 | end_date           | 指定作业过期时间，即不再运行的日期和时间。 在 `end_date` 之后，如果 `auto_drop` 为 `TRUE`，则作业将被删除。如果 `auto_drop` 为 `FALSE`，则作业被禁用，而且作业的 `STATE` 设置为 `COMPLETED`。 如果未指定 `end_date` 的值，则作业将被一直重复执行，除非设置了 `max_runs` 或者 `max_failures`，在这种情况下，当达到其中任一值时，作业将停止运行。 `end_date` 的值必须在 `start_date` 的值之后，否则会报错。如果 `end_date` 的值与 `start_date` 的值相同，则作业不会被执行，也不会报错。 |
 | job_class          | 与此作业相关联的类。 |
 | enabled            | 指定是否启用创建的作业。该属性可以设置为 `TRUE` 或者 `FALSE`，默认为 `FALSE`，即创建的作业将被禁用。 对于已禁用的作业，虽然已捕获该作业的相关元数据，并且该作业也属于数据库对象，但是，Scheduler 会忽略该作业，也不会处理该作业。如果想处理该作业，可以通过将此参数设置为 `TRUE` 或使用 `ENABLE` 过程来启用作业。  |
