--- a/en-US/6.data-migration/3.Import-data-into-OceanBase-database-using-OBDUMPER-OBLOADER.md
+++ b/en-US/6.data-migration/3.Import-data-into-OceanBase-database-using-OBDUMPER-OBLOADER.md
@@ -17,18 +17,18 @@ bin/obdumper-h <host IP address> -P <port> -u <user> -p <password> --sys-user <r
 The password of the `proxyro` user is specified in the cluster configuration file during cluster deployment by using OceanBase Deployer (OBD).
 
 ```bash
-[root@obce00 ~]# mysql -h 172.20.249.52 -P 2883 -u proxyro@sys#obce-3zones -puY7Yf8zx -c -A
+[root@obce00 ~]# mysql -h 172.20.249.52 -P 2883 -u proxyro@sys#obce-3zones -p****** -c -A
 ERROR 2013 (HY000): Lost connection to MySQL server at 'reading authorization packet', system error: 11
 ```
 
 The password is correct. The logon fails because OBProxy prohibits logon as the `proxyro` user by default. Modify the OBProxy settings to skip logon check for the `proxyro` user.
 
 ```sql
-mysql -h 172.20.249.52 -u root@proxysys -P 2883 -p0MdTv1tm
+mysql -h 172.20.249.52 -u root@proxysys -P 2883 -p******
 alter proxyconfig set skip_proxyro_check=true;
 MySQL [(none)]> show proxyconfig like '%skip_proxyro_check%';
 +--------------------+-------+--------------------------------------------------+-------------+---------------+
-| name                | value  | info                                                                      | need_reboot | visible_level |
+| name               | value | info                                             | need_reboot | visible_level |
 +--------------------+-------+--------------------------------------------------+-------------+---------------+
 | skip_proxyro_check | True  | used for proxro@sys, if set false, access denied | false       | SYS           |
 +--------------------+-------+--------------------------------------------------+-------------+---------------+
@@ -38,7 +38,7 @@ MySQL [(none)]> show proxyconfig like '%skip_proxyro_check%';
 Test the connectivity of the `proxyro` user again.
 
 ```bash
-[root@obce00 ~]# mysql -h 172.20.249.52 -P 2883 -u proxyro@sys#obce-3zones -puY7Yf8zx -c -A -Ns -e "show databases;"
+[root@obce00 ~]# mysql -h 172.20.249.52 -P 2883 -u proxyro@sys#obce-3zones -p****** -c -A -Ns -e "show databases;"
 oceanbase
 information_schema
 [root@obce00 ~]#
@@ -49,7 +49,7 @@ information_schema
 Export tables in the `test` database in the `obmysql` tenant.
 
 ```bash
-[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obdumper -h 172.20.249.52 -P 2883 -u u_dumper -p 123456 --sys-user=proxyro --sys-password=uY7Yf8zx -c obce-3zones -t obmysql -D test --ddl --all -f /tmp/obdumper
+[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obdumper -h 172.20.249.52 -P 2883 -u u_dumper -p ****** --sys-user=proxyro --sys-password=****** -c obce-3zones -t obmysql -D test --ddl --all -f /tmp/obdumper
 2021-09-29 21:14:55 [INFO] Parsed args:
 -h[--host] 172.20.249.52
 -P[--port] 2883
@@ -153,7 +153,7 @@ If an error occurs during the export, you can view the logs in the `logs/` direc
 ### Export data only
 
 ```bash
-[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obdumper -h 172.20.249.52 -P 2883 -u u_dumper -p 123456 --sys-user=proxyro --sys-password=uY7Yf8zx -c obce-3zones -t obmysql -D test --csv --all -f /tmp/obdumper
+[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obdumper -h 172.20.249.52 -P 2883 -u u_dumper -p ****** --sys-user=proxyro --sys-password=****** -c obce-3zones -t obmysql -D test --csv --all -f /tmp/obdumper
 2021-09-29 21:16:54 [INFO] Parsed args:
 -h[--host] 172.20.249.52
 -P[--port] 2883
@@ -267,7 +267,7 @@ OBLOADER must obtain the metadata information of the table schemas during an imp
 The following example imports a previously exported data file to the `test2` database of the `obmysql` tenant.
 
 ```bash
-[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obloader -h 172.20.249.52 -P 2883 -u u_loader -p 123456 --sys-user=proxyro --sys-password=uY7Yf8zx -c obce-3zones -t obmysql -D test2 --ddl --all -f /tmp/obdumper
+[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obloader -h 172.20.249.52 -P 2883 -u u_loader -p ****** --sys-user=proxyro --sys-password=****** -c obce-3zones -t obmysql -D test2 --ddl --all -f /tmp/obdumper
 2021-09-29 21:26:05 [INFO] Parsed args:
 -h[--host] 172.20.249.52
 -P[--port] 2883
@@ -322,7 +322,7 @@ Total Count: 1          End Time: 2021-09-29 21:26:06
 ### Import data
 
 ```bash
-[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obloader -h 172.20.249.52 -P 2883 -u u_loader -p 123456 --sys-user=proxyro --sys-password=uY7Yf8zx -c obce-3zones -t obmysql -D test2 --csv --all -f /tmp/obdumper
+[root@obce00 ob-loader-dumper-2.1.13-SNAPSHOT]# bin/obloader -h 172.20.249.52 -P 2883 -u u_loader -p ****** --sys-user=proxyro --sys-password=****** -c obce-3zones -t obmysql -D test2 --csv --all -f /tmp/obdumper
 2021-09-29 21:27:53 [INFO] Parsed args:
 -h[--host] 172.20.249.52
 -P[--port] 2883
