--- a/en-US/6.data-migration/7.migrate-data-from-OceanBase-database-to-MySQL/12.how-to-use-canal-to-synchronize-ob-data-to.md
+++ b/en-US/6.data-migration/7.migrate-data-from-OceanBase-database-to-MySQL/12.how-to-use-canal-to-synchronize-ob-data-to.md
@@ -75,7 +75,7 @@ Component overview:
    EA87898018FD1EDDC2AA11CE1556E917
 
    [root@172.30.199.49 bin]$./logproxy -x Root@2021
-   8852DB95B3D54B1A8F866836A9D8FD52
+   ****************************************
    ```
 
 * Modify parameters in the conf.json file.
@@ -90,7 +90,7 @@ Component overview:
 
    # Modify content in the conf.json file  
    "ob_sys_username": "EA87898018FD1EDDC2AA11CE1556E917",
-   "ob_sys_password": "8852DB95B3D54B1A8F866836A9D8FD52",
+   "ob_sys_password": "****************************************",
    ```
 
 * Start oblogproxy.
@@ -191,7 +191,7 @@ total 16
 # Parameters of the OceanBase cluster
 canal.instance.oceanbase.rsList=172.30.199.49:2882:2881;172.30.199.47:2882:2881
 canal.instance.oceanbase.username=root@test_tenant_1#obcluster
-canal.instance.oceanbase.password=Root@2021
+canal.instance.oceanbase.password=********
 canal.instance.oceanbase.startTimestamp=0
 
 # Parameters of oblogproxy
@@ -261,7 +261,7 @@ canalAdapters:
           jdbc.driverClassName: com.mysql.jdbc.Driver
           jdbc.url: jdbc:mysql://172.30.199.49:3367/mysql?useUnicode=true&useSSL=false
           jdbc.username: root
-          jdbc.password: Root@2021
+          jdbc.password: ********
 ```
 
 Modify database/table mappings (database mappings as an example here) for the adapter.
