--- a/en-US/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
+++ b/en-US/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
@@ -292,7 +292,7 @@ Perform the following steps to configure the NTP clock source.
    [root@centos-01 /root]#ntpq -4p
    remote refid st t when poll reach delay offset jitter
    ==============================================================================
-   *time6.aliyun.co 10.137.38.86 2 u 712 1024 377 21.951 4.253 4.208
+   *time6.aliyun.co xxx.xxx.xxx.xxx 2 u 712 1024 377 21.951 4.253 4.208
    ```
 
 3. (Optional) Enable the NTP server.
@@ -383,7 +383,7 @@ Perform the following steps to configure the NTP clock source.
    The following output is returned:
 
    ```bash
-   synchronised to NTP server (10.143.0.44) at stratum 3
+   synchronised to NTP server (xxx.xxx.xxx.xxx) at stratum 3
    time correct to within 2 ms
    polling server every 64 s
    ```
