--- a/zh-CN/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
+++ b/zh-CN/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
@@ -293,7 +293,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
    [root@centos-01 /root]#ntpq -4p
    remote refid st t when poll reach delay offset jitter
    ==============================================================================
-   *time6.aliyun.co 10.137.38.86 2 u 712 1024 377 21.951 4.253 4.208
+   *time6.aliyun.co xxx.xxx.xxx.xxx 2 u 712 1024 377 21.951 4.253 4.208
    ```
 
 3. （可选）开启 NTP 服务端服务。
@@ -384,7 +384,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
    返回以下结果：
 
    ```bash
-   synchronised to NTP server (10.143.0.44) at stratum 3
+   synchronised to NTP server (xxx.xxx.xxx.xxx) at stratum 3
    time correct to within 2 ms
    polling server every 64 s
    ```
