--- a/en-US/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
+++ b/en-US/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
@@ -297,7 +297,7 @@ Perform the following steps to configure the NTP clock source.
 
 3. (Optional) Enable the NTP server.
 
-   If you already have an NTP server, skip this step. The following example describes how to enable time synchronization by taking the server `10.244.0.114` as the NTP server.
+   If you already have an NTP server, skip this step. The following example describes how to enable time synchronization by taking the server `xxx.xxx.xxx.xxx` as the NTP server.
    1. Edit the configuration file.
 
       Log on to the NTP server as a root user and run the following command to open the configuration file:
@@ -349,7 +349,7 @@ Perform the following steps to configure the NTP clock source.
    3. Run the following command to synchronize the time with the NTP server:
 
       ```bash
-      ntpdate 10.244.0.114
+      ntpdate xxx.xxx.xxx.xxx
       ```
 
    4. Edit the configuration file.
