--- a/en-US/6.data-migration/2.migrate-data-from-MySQL-database-to-OceanBase-database/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
+++ b/en-US/6.data-migration/2.migrate-data-from-MySQL-database-to-OceanBase-database/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
@@ -257,7 +257,7 @@ Canal Admin is used here.
 
 * (Optional) Use Canal Admin to deploy the Canal server and Canal instance
 
-   To use Canal Admin to manage Canal servers, log on to the Canal Admin console at <http://172.24.50.39:8089/#/canalServer/nodeServers>. In the left-side navigation pane, choose **Canal Server** \> **Server Management**. Then, click **Create Server**.
+   To use Canal Admin to manage Canal servers, log on to the Canal Admin console at <http://xxx.xxx.xxx.xxx:8089/#/canalServer/nodeServers>. In the left-side navigation pane, choose **Canal Server** \> **Server Management**. Then, click **Create Server**.
 
    > **Note**
    >
