--- a/en-US/6.data-migration/7.migrate-data-from-OceanBase-database-to-MySQL/12.how-to-use-canal-to-synchronize-ob-data-to.md
+++ b/en-US/6.data-migration/7.migrate-data-from-OceanBase-database-to-MySQL/12.how-to-use-canal-to-synchronize-ob-data-to.md
@@ -152,7 +152,7 @@ Download canal-for-ob. For more information about canal-for-ob, see the [GitHub 
 Modify the `canal.properties` file under `/opt/canal_ob/canal.deployer-for-ob-rc1/conf`.
 
 ```yaml
-canal.zkServers = 172.30.199.47:12181,172.30.199.48:12181,xxx.xxx.xxx.xxx:12181
+canal.zkServers = xxx.xxx.xxx.1:12181,xxx.xxx.xxx.2:12181,xxx.xxx.xxx.3:12181
 canal.serverMode = tcp
 canal.destinations = obtest2
 canal.instance.global.spring.xml = classpath:spring/ob-default-instance.xml
