--- a/zh-CN/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
+++ b/zh-CN/4.installation-and-deployment/2.local-deployment/2.environment-and-configuration-checks.md
@@ -298,7 +298,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
 
 3. （可选）开启 NTP 服务端服务。
 
-   如果您已经有了 NTP 服务端服务器，则可跳过此步骤。本文档使用目标机器 `10.244.0.114` 作为 NTP 服务端服务器。
+   如果您已经有了 NTP 服务端服务器，则可跳过此步骤。本文档使用目标机器 `xxx.xxx.xxx.xxx` 作为 NTP 服务端服务器。
    1. 编辑配置文件。
 
       以 root 用户登录 NTP 服务端服务器，运行以下命令编辑配置文件：
@@ -350,7 +350,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
    3. 运行以下命令同步 NTP 服务端时间：
 
       ```bash
-      ntpdate 10.244.0.114
+      ntpdate xxx.xxx.xxx.xxx
       ```
 
    4. 编辑配置文件。
