--- a/zh-CN/2.quick-start/3.Experience-the-advanced-features-of-OceanBase/4.Experience-the-multi-tenancy-feature.md
+++ b/zh-CN/2.quick-start/3.Experience-the-advanced-features-of-OceanBase/4.Experience-the-multi-tenancy-feature.md
@@ -82,7 +82,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 使用新创建的 tenant1 进行登录，并创建一张测试表。
 
 ```sql
-obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p
+obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p******
 obclient [(none)]> show databases;
 +--------------------+
 | Database           |
