--- a/zh-CN/3.developer-guide/1.client-connects-to-oceanbase-database/6.golang-application.md
+++ b/zh-CN/3.developer-guide/1.client-connects-to-oceanbase-database/6.golang-application.md
@@ -90,7 +90,7 @@ func main() {
     }
 
 func select_all() {
-    conn := "root:@tcp(127.0.0.1:2881)/test"
+    conn := "root:******@tcp(127.0.0.1:2881)/test"
     db, err := sql.Open("mysql", conn)
     if err != nil {
         log.Fatal(err)
@@ -135,7 +135,7 @@ func select_all() {
 //格式
 conn := "{username}:{password}@tcp({hostname}:{port})/{dbname}"
 //示例
-conn := "root:@tcp(127.0.0.1:2881)/test"
+conn := "root:******@tcp(127.0.0.1:2881)/test"
 ```
 
 参数说明：
