--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/1.alter-function-mysql.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/2.pl-mysql/6.sql-statements-for-pl-stored-programs-mysql/1.alter-function-mysql.md
@@ -19,7 +19,7 @@ characteristic: {
 
 `ALTER FUNCTION` 语句不能用于更改存储函数的参数或主体，如果需要进行此类更改，必须使用 `DROP FUNCTION` 和 `CREATE FUNCTION` 删除并重新创建函数。
 
-您必须具有该函数的 `ALTER ROUTINE` 权限。默认情况下，该权限自动授予过程创建者。
+您必须具有该函数的 `ALTER ROUTINE` 权限。默认情况下，该权限自动授予函数创建者。
 
 有关例程使用数据的特性信息如下：
 
