--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/2.sa-sysdba-policy-management-package-oracle/1.sa-sysdba-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/2.sa-sysdba-policy-management-package-oracle/1.sa-sysdba-overview-oracle.md
@@ -1,7 +1,7 @@
 SA_SYSDBA 概述 
 =================================
 
-`SA_SYSDBA` 包用于管理标签安全策略，例如创建、更改或禁用。
+`SA_SYSDBA` 包用于管理标签安全策略，例如创建、更改或删除。
 
 要使用此 PL 包，您必须拥有 `EXECUTE` 权限。`SA_SYSDBA` 包是调用程序的权限包，在使用此包之前，必须向 `SYS` 用户提供以下 `INHERIT PRIVILEGES`：
 
