--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/5.sa-policy-admin-policy-management-packs-oracle/4.sa-policy-admin-enable-table-policy-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/13.pl-label-security-package-oracle/5.sa-policy-admin-policy-management-packs-oracle/4.sa-policy-admin-enable-table-policy-oracle.md
@@ -38,7 +38,7 @@ table_name      IN VARCHAR);
 示例 
 -----------
 
-如下示例为在 Schema `FURY` 中的 `MISSION_LIST` 表上禁用 `shield_agent_policy` 策略：
+如下示例为在 Schema `FURY` 中的 `MISSION_LIST` 表上启用 `shield_agent_policy` 策略：
 
 ```sql
 BEGIN 
