--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/8.pl-json-data-structure-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/8.pl-json-data-structure-oracle.md
@@ -10,7 +10,7 @@
 
 ### 创建 `JSON_ELEMENT_T` 的实例
 
-使用 `parse` 函数可以创建 `JSON_ELEMENT_T` 的实例。使用 `parse` 函数创建一个 `JSON_ELEMENT_T` 实例时，该函数将 `VARCHAR2`、`CLOB` 或 `BLOB` 数据作为 JSON 字符串输入，并返回一个 `JSON_ELEMENT_T`实例。如果提供的输入不是有效的 JSON，则会发生报错。可以使用 `IS JSON` SQL 条件做为输入约束。
+使用 `parse` 函数可以创建 `JSON_ELEMENT_T` 的实例。使用 `parse` 函数创建一个 `JSON_ELEMENT_T` 实例时，该函数将 `VARCHAR2`、`CLOB` 或 `BLOB` 数据作为 JSON 字符串输入，并返回一个 `JSON_ELEMENT_T` 实例。如果提供的输入不是有效的 JSON，则会发生报错。可以使用 `IS JSON` SQL 条件做为输入约束。
 
 ```sql
 STATIC FUNCTION parse(json VARCHAR2) RETURN JSON_ELEMENT_T
@@ -22,7 +22,7 @@ STATIC FUNCTION parse(json BLOB)     RETURN JSON_ELEMENT_T
 
 ### JSON 对象类型的序列化
 
-序列化是 `parse` 函数的逆过程，解析输入的 JSON 数据并返回 PL JSON 对象类型的实例。序列化方法的名称以前缀 `to_` 开头。大多数序列化方法都是成员函数。但是，对于 `CLOB` 或 `BLOB` 实例的序列化有成员函数和成员过程两种形式的方法。
+序列化是 `parse` 函数的逆过程，解析输入的 JSON 数据并返回字符串。序列化方法的名称以前缀 `to_` 开头。大多数序列化方法都是成员函数。但是，对于 `CLOB` 或 `BLOB` 实例的序列化有成员函数和成员过程两种形式的方法。
 
 ```sql
 MEMBER FUNCTION to_String    RETURN VARCHAR2
@@ -96,15 +96,15 @@ CONSTRUCTOR FUNCTION JSON_OBJECT_T(e JSON_ELEMENT_T) RETURN SELF AS RESULT
 使用以下函数和过程可以检索 JSON 对象的值。
 
 ```sql
-get(key VARCHAR2)           RETURN JSON_ELEMENT_T  // 看情况考虑是否返回基类类型
+get(key VARCHAR2)           RETURN JSON_ELEMENT_T // 看情况考虑是否返回基类类型
 get_String(key VARCHAR2)    RETURN VARCHAR2 // 查找到的 value, 转换成 VARCHAR2
 get_Number(key VARCHAR2)    RETURN NUMBER // 查找到的 value, 转换成 NUMBER
-get_Date(key VARCHAR2)      RETURN DATE //// 查找到的 value, 转换成 DATE
+get_Date(key VARCHAR2)      RETURN DATE // 查找到的 value, 转换成 DATE
 get_Timestamp(key VARCHAR2) RETURN TIMESTAMP // 查找到的 value, 转换成 TIMESTAMP
 get_Boolean(key VARCHAR2)   RETURN BOOLEAN // 查找到的 value, 转换成 BOOLEAN
 get_Clob(key VARCHAR2)      RETURN CLOB // 查找到的 value, 转换成 CLOB
-get_Blob(key VARCHAR2)      RETURN BLOB // // 查找到的 value, 转换成 BLOB
-get_Object(key VARCHAR2)    RETURN JSON_OBJECT_T // 查找到的 value, 转换成 TIMESTAMP
+get_Blob(key VARCHAR2)      RETURN BLOB //  查找到的 value, 转换成 BLOB
+get_Object(key VARCHAR2)    RETURN JSON_OBJECT_T // 查找到的 value, 转换成 JSON_OBJECT_T
 get_Array(key VARCHAR2)     RETURN JSON_ARRAY_T // // 查找到的 value, 转换成 JSON_ARRAY_T
 ```
 
@@ -114,7 +114,7 @@ get_Array(key VARCHAR2)     RETURN JSON_ARRAY_T // // 查找到的 value, 转换
 
 ```sql
 PROCEDURE get_Clob(key NUMBER, c IN OUT CLOB)   // 查找到的 value, 转换成 CLOB，放在 c 参数中
-PROCEDURE get_Blob(key NUMBER, c IN OUT BLOB)   // 查找到的 value, 转换成 BLOB, 放在 c参数中
+PROCEDURE get_Blob(key NUMBER, c IN OUT BLOB)   // 查找到的 value, 转换成 BLOB, 放在 c 参数中
 PROCEDURE put(key VARCHAR2, value JSON_ELEMENT_T)   // 添加 K-V pair, value 类型是 JSON_ELEMENT_T, 看情况是否设置基类
 PROCEDURE put(key VARCHAR2, value VARCHAR2)   // 添加 K-V pair, value 类型是 VARCHAR2
 PROCEDURE put(key VARCHAR2, value NUMBER)   // 添加 K-V pair , value 类型是 NUMBER
