--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/17.drop-trigger-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/17.drop-trigger-oracle.md
@@ -11,7 +11,7 @@ DROP TRIGGER
 前提条件 
 -------------------------
 
-该触发器必须在当前用户的 Schema 中，或者用户必须具有 `ALTER ANY PROCEDURE` 的系统权限。
+该触发器必须在当前用户的 Schema 中，或者用户必须具有 `ALTER ANY TRIGGER` 的系统权限。
 
 要在其他用户的 Schema 中的 `DATABASE` 上删除触发器，必须具有 `ADMINISTER DATABASE TRIGGER` 的系统权限。
 
