--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/5.alter-trigger-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/5.alter-trigger-oracle.md
@@ -16,7 +16,7 @@ ALTER TRIGGER
 前提条件 
 -------------------------
 
-如果触发器在 `SYS` Schema 中，则必须以 `SYSDBA` 身份连接。否则，该触发器必须在当前用户的 Schema 中，或者用户必须具有 `ALTER ANY PROCEDURE` 的系统权限。
+如果触发器在 `SYS` Schema 中，则必须以 `SYSDBA` 身份连接。否则，该触发器必须在当前用户的 Schema 中，或者用户必须具有 `ALTER ANY TRIGGER` 的系统权限。
 
 此外，要更改 `DATABASE` 上的触发器，您必须具有 `ADMINISTER DATABASE TRIGGER` 的系统权限。
 
