--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/07.Create-and-manage-partition-tables/04.create-secondary-partition-table.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/07.Create-and-manage-partition-tables/04.create-secondary-partition-table.md
@@ -35,8 +35,7 @@ table_option_list:
   table_option [table_option]
 
 table_option:
-   LOCALITY [=] locality_name
-  | PRIMARY_ZONE [=] primary_zone_name
+   PRIMARY_ZONE [=] primary_zone_name
 
 partition_option:
   PARTITION BY
@@ -132,8 +131,7 @@ table_option_list:
   table_option [table_option]
 
 table_option:
-  LOCALITY [=] locality_name
-  | PRIMARY_ZONE [=] primary_zone_name
+   PRIMARY_ZONE [=] primary_zone_name
 
 partition_option_list:
   PARTITION BY
