--- a/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/3.create-and-manage-database-objects/7.create-and-manage-partition-table/4.create-a-level-2-partition-table.md
+++ b/en-US/3.developer-guide/2.application-development-based-on-mysql-mode/3.create-and-manage-database-objects/7.create-and-manage-partition-table/4.create-a-level-2-partition-table.md
@@ -62,8 +62,7 @@ table_option_list:
 table_option [table_option]
 
 table_option:
-      LOCALITY [=] locality_name
-    | PRIMARY_ZONE [=] primary_zone_name
+     PRIMARY_ZONE [=] primary_zone_name
 
 partition_option_list:
 PARTITION BY
@@ -169,8 +168,7 @@ table_option_list:
 table_option [table_option]
 
 table_option:
-      LOCALITY [=] locality_name
-    | PRIMARY_ZONE [=] primary_zone_name
+     PRIMARY_ZONE [=] primary_zone_name
 
 partition_option_list:
 PARTITION BY
