--- a/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/06.Create-and-manage-tables/02.create-table.md
+++ b/en-US/3.developer-guide/3.Application-development-based-on-Oracle-mode/3.Create-and-manage-database-objects/06.Create-and-manage-tables/02.create-table.md
@@ -84,14 +84,11 @@ table_option:
       [DEFAULT] {CHARSET | CHARACTER SET} [=] charset_name
     | [DEFAULT] COLLATE [=] collation_name
     | primary_zone
-    | replica_num
     | table_tablegroup
     | block_size
     | compression
     | AUTO_INCREMENT [=] INT_VALUE
     | comment
-    | DUPLICATE_SCOPE [=] "none|zone|region|cluster"
-    | LOCALITY [=] "locality description"
     | ROW_FORMAT [=] REDUNDANT|COMPACT|DYNAMIC|COMPRESSED|DEFAULT
     | PCTFREE [=] num
     | parallel_clause
@@ -152,19 +149,15 @@ partition_count | subpartition_count:
 | PRIMARY KEY | The primary key of the created table. If this parameter is not specified, a hidden primary key is used.  OceanBase Database does not allow you to modify the primary key of a table or use the `ALTER TABLE` statement to add a primary key to a table. Therefore, we recommend that you specify a primary key when creating a table.  |
 | FOREIGN KEY | The foreign key of the created table.  If you do not specify the name of the foreign key, it will be named in the format of table name + `OBFK`+ time when the foreign key was created. For example, the foreign key created for table `t1` at 00:00:00 on August 1, 2021 is named as `t1_OBFK_1627747200000000`.  |
 | KEY | INDEX | The key or index of the created table.  If you do not specify the name of the index, the name of the first column referenced by the index is used as the index name. If duplicate index names exist, the index will be named in the format of underscore(_) + sequence number. For example, if the name of the index created based on column `c1` conflicts with an existing index name, the index will be named as `c1_2`. You can execute the`SHOW INDEX` statement to query the indexes of a table.  |
-| DUPLICATE_SCOPE | The attribute of a replica table. Valid values: <ul><li>`none`: The table is a normal table. </li><li> `zone`: The table is a replica table. The leader must copy transactions to all F and R replicas in this zone.   </li><li>`region`: The table is a replica table. The leader must copy transactions to all F and R replicas in this region. </li><li> `cluster`: The table is a replica table. The leader must copy transactions to all F and R replicas in this cluster.  </li></ul>   If the `DUPLICATE_SCOPE` parameter is not specified, the default value `none` is used.  Currently, OceanBase Database supports only ``cluster-level replica tables.  |
 | ROW_FORMAT | Specifies whether to enable the encoding storage format. <ul><li>`redundant`: indicates that the encoding storage format is not enabled. </li><li> `compact`: indicates that the encoding storage format is not enabled.  </li><li>`dynamic`: an encoding storage format. </li><li>`compressed`: an encoding storage format.   </li><li> `default`: This value is equivalent to `dynamic`.   </li></ul> |
 | null | Creates a generated column. `expr` specifies the expression used to calculate the column value. <ul><li>`VIRTUAL`: indicates that column values are not stored, but are immediately calculated after any `BEFORE` trigger when a row is read. Virtual columns do not occupy storage space. </li><li> `STORED`: evaluates and stores column values when you insert or update a row. Stored columns occupy storage space and can be indexed. </li></ul> |
 | BLOCK_SIZE | The microblock size for the table.  |
 | COMPRESSION | The compression algorithm for the table. Valid values:<ul><li>`none`: indicates that no compression algorithm is used. </li><li> `lz4_1.0`: indicates that the `lz4` compression algorithm is used.   </li><li>`zstd_1.0`: indicates that the `zstd` compression algorithm is used. </li><li> `snappy_1.0`: indicates that the `snappy` compression algorithm is used. </li></ul> |
 | CHARSET | CHARACTER SET | The default character set for columns in the table. Valid values:<ul><li>`utf8`</li><li> `utf8mb4` </li><li>`gbk`</li><li>`utf16`  </li><li>`gb18030` </li></ul> |
 | COLLATE | The default collation for columns in the table. Valid values:<ul><li>`utf8_bin`</li><li> `utf8_general_ci`   </li><li>`utf8_unicode_ci`</li><li> `gbk_bin`  </li><li>`gbk_chinese_ci`</li><li>`utf8mb4_general_ci` </li><li>`utf8mb4__general_cs`</li><li> `utf8mb4_bin` </li><li>`utf8mb4_unicode_ci`</li><li> `utf16_general_ci`   </li><li>`utf16_bin`</li><li> `utf16_unicode_ci` </li><li>`gb18030_chinese_ci`</li><li>`gb18030_bin` </li></ul> |
-| primary_zone | The primary zone where the leader resides.  |
-| replica_num | The number of replicas.  <br></br>**Note**</br>The current version does not support this parameter.  |
 | table_tablegroup | The table group to which the table belongs.  |
 | AUTO_INCREMENT | The start value of an auto-increment column in the table.  OceanBase Database allows you to use auto-increment columns as the partitioning key.  |
 | comment | The comment.  |
-| LOCALITY | The distribution of replicas across zones. For example, `F@z1`, `F@z2`, `F@z3`, and `R@z4` indicate that `z1`, `z2`, and `z3` are full-featured replicas, and `z4` is a read-only replica.  |
 | PCTFREE | The percentage of space reserved for macroblocks.  |
 | parallel_clause | The degree of parallelism at the table level.<ul><li>`NOPARALLEL`: sets the degree of parallelism to `1`, which is the default value. </li><li> `PARALLEL integer`: sets the degree of parallelism to an integer greater than or equal to 1.  </li></ul> |
 
@@ -323,8 +316,6 @@ In general, OceanBase uses a three-replica architecture. By default, each partit
 
 You can create a replica table on every server in the tenant. You can have only one leader and two or more followers in the tenant. Full data synchronization is implemented to maintain strong consistency between the leader and followers. This allows your application to execute specific SQL JOIN queries on the same server for better performance.
 
-To create a replica table, add a `DUPLICATE_SCOPE` clause to the `CREATE TABLE` statement.
-
 Example:
 
 Create a table named `staff_DC` that uses the `zstd` compression algorithm. Enable the encoding storage format, and set the reserved space for macroblocks to `0`, the microblock size to `16384`, the attribute of the table to cluster-level replica table, and the locality to `F@zone1`.
@@ -344,6 +335,5 @@ CREATE TABLE staff_DC(
   wages number(7, 3),
   Entry_time TIMESTAMP(6),
   PRIMARY KEY (id)
-) COMPRESS FOR QUERY PCTFREE 0 BLOCK_SIZE = 16384
-  DUPLICATE_SCOPE = 'cluster' locality = 'F@zone1';
+) COMPRESS FOR QUERY PCTFREE 0 BLOCK_SIZE = 16384;
 ```
