--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
@@ -73,7 +73,6 @@ table_option:
     | block_size
     | compression
     | comment
-    | DUPLICATE_SCOPE [=] "none|cluster"
     | ENABLE ROW MOVEMENT
     | DISABLE ROW MOVEMENT
     | physical_attribute
@@ -204,7 +203,6 @@ on_commit_option:
 |-----------------------------|---------------------------------------------------------------|
 | GLOBAL TEMPORARY            | 将该表创建为临时表。      |
 | DEFAULT expression          | 指定列的默认值。`expression` 支持包含 Sequence 的函数表达式。    |
-| DUPLICATE_SCOPE             | 用来指定复制表属性，取值如下： <ul><li> `none`：表示该表是一个普通表。</li>   <li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到 Cluster 的所有 F 副本及 R 副本。</li></ul>    不指定  `DUPLICATE_SCOPE` 的情况下，默认值为 `none`。 目前，OceanBase 数据库仅支持 `cluster` 级别的复制表。    |
 | BLOCK_SIZE                  | 指定表的微块大小。     |
 | COMPRESSION                 | 指定存储格式 Flat/Encoding 以及压缩方法，对应如下： <ul><li> `nocompress`：使用 Flat 格式，不进行压缩。</li>   <li> `compress [basic]`：使用 Flat 格式和 lz4_1.0 压缩方法。</li>   <li> `compress for oltp`：使用 Flat 格式和 zstd_1.0 压缩方法。</li>   <li>  `query low` 或者 `query high`：使用 Encoding 格式和  lz4_1.0 压缩方法。</li>   <li>  `archive low` 或者 `archive high`：使用 Encoding 格式和 zstd_1.0 压缩方法。</li> </ul>   |
 | table_group            | 指定表所属的 Table Group 属性。    |
@@ -231,9 +229,7 @@ on_commit_option:
                    i_data VARCHAR(50),i_im_id INT,PRIMARY KEY(i_id)) 
                    COMPRESS FOR QUERY 
                    PCTFREE = 0 
-                   BLOCK_SIZE = 16384
-                   DUPLICATE_SCOPE='cluster' 
-                   LOCALITY='F@zone1,R{all_server}@zone2' ;
+                   BLOCK_SIZE = 16384 ;
   Query OK, 0 rows affected
   ```
 
