--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/3.backup.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/3.backup.md
@@ -9,7 +9,7 @@
 ### 配置数据备份目的端
 
 ```sql
-/* 系统租户为指定租户配置备份目的端 */
+/* 系统租户为指定租户（不包含 sys 租户本身）配置备份目的端 */
 ALTER SYSTEM SET DATA_BACKUP_DEST = 'data_backup_path' TENANT = tenant_name;
 
 /* 用户租户配置本租户的备份目的端 */
