--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/2.archivelog.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/2.archivelog.md
@@ -10,7 +10,7 @@
 ### 配置归档目的端
 
 ```sql
-/*系统租户为指定租户配置归档目的端*/
+/*系统租户为指定租户（不包含 sys 租户本身）配置归档目的端*/
 ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]' TENANT = tenant_name;
 
 /*用户租户配置本租户的归档目的端*/
