tools sync and low mistake fixed

--- a/en-US/2.quickstart/3.mysql-based-application-development/3.c-application.md
+++ b/en-US/2.quickstart/3.mysql-based-application-development/3.c-application.md
@@ -161,7 +161,7 @@ int main(int argc, char** argv)
 {
   mysql_library_init(0, NULL, NULL);
   MYSQL *mysql = mysql_init(NULL);
-  char* host_name = "172.xx.xx.xx";// Set your MySQL host.
+  char* host_name = "xxx.xxx.xxx.xxx";// Set your MySQL host.
   char* user_name = "r***"; // Set your username.
   char* password = "******"; // set your password.
   char* db_name = "test"; // Set your database name.
