--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallel-import-and-data-compression.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallel-import-and-data-compression.md
@@ -10,8 +10,8 @@ This article describes how to experience the PDML feature of OceanBase Database.
 
 First, copy the schema of the lineitem table and create an empty table named lineitem2. Table partitioning is used to manage large tables in OceanBase Database. In this example, 16 partitions are used. Therefore, the lineitem2 table must also be split into 16 partitions:
 
-```sql
-MySQL [test]> show create table lineitem\G;
+```shell
+obclient [test]> show create table lineitem\G;
 *************************** 1. row ***************************
        Table: lineitem
 
@@ -67,8 +67,8 @@ set ob_trx_timeout = 1000000000;
 
 Insert data. The execution result is as follows:
 
-```sql
-MySQL [test]> insert into lineitem2 select * from lineitem;
+```shell
+obclient [test]> INSERT INTO lineitem2 SELECT * FROM lineitem;
 Query OK, 6001215 rows affected (1 min 47.312 sec)
 Records: 6001215  Duplicates: 0  Warnings: 0
 ```
@@ -81,18 +81,18 @@ You can see that OceanBase Database takes 107s to insert 6 million rows of data 
 
 Add a hint to the statement to enable PDML. Before you execute the statement again, clear the data inserted last time. 
 
-```sql
-truncate table lineitem2;
-insert /*+ parallel(16) enable_parallel_dml */ into lineitem2 select * from lineitem;
+```shell
+obclient [test]> TRUNCATE TABLE lineitem2;
+obclient [test]> INSERT /*+ parallel(16) enable_parallel_dml */ INTO lineitem2 SELECT * FROM lineitem;
 ```
 
 Execution results:
 
-```sql
-MySQL [test]> truncate table lineitem2;
+```shell
+obclient [test]> truncate table lineitem2;
 Query OK, 0 rows affected (0.108 sec)
 
-MySQL [test]> insert /*+ parallel(16) enable_parallel_dml */ into lineitem2 select * from lineitem;
+obclient [test]> insert /*+ parallel(16) enable_parallel_dml */ into lineitem2 select * from lineitem;
 Query OK, 6001215 rows affected (22.117 sec)
 Records: 6001215  Duplicates: 0  Warnings: 0
 ```
@@ -109,7 +109,7 @@ OceanBase Database has its own storage engine based on the LSM-tree structure. D
 
 First, use the CreateData.jar tool to generate 50 million rows of test data in the `/home/soft `directory. To download the tool, click [CreateData.jar](https://lark-assets-prod-aliyun.oss-accelerate.aliyuncs.com/lark/0/2022/jar/99622/1659402075309-3195cacf-c820-4d3a-98b0-ef1b6f4d2bf5.jar?OSSAccessKeyId=LTAI4GGhPJmQ4HWCmhDAn4F5&Expires=1662013452&Signature=zfgOsOzKSRYayaYkyO8BpQULUFw%3D&response-content-disposition=attachment%3Bfilename*%3DUTF-8%27%27CreateData.jar). It takes about 10 minutes to generate the data. You can also use other tools to generate test data. 
 
-```sql
+```shell
 #mkdir /home/soft/
 #java -jar CreateData.jar /home/soft/ 50000000
 filePath is : /home/soft/
@@ -123,9 +123,9 @@ OceanBase Database allows you to import data from CSV files in multiple ways. Th
 
 1. First, name the generated file and check the actual file size. 
 
-   ```bash
-   mv t_bigdata_loader.unl t_f1.csv
-   du -sh t_f1.csv
+   ```shell
+   # mv t_bigdata_loader.unl t_f1.csv
+   # du -sh t_f1.csv
    10G     t_f1.csv
    ```
 
@@ -141,7 +141,7 @@ OceanBase Database allows you to import data from CSV files in multiple ways. Th
 
 3. Create a table named t_f1 in the test database of the test tenant. For more information about how to create a tenant, see Manage tenants. 
 
-   ```sql
+   ```shell
    obclient -h127.0.0.1 -P2881 -uroot@test -Dtest -A -p -c
 
    obclient [test]>create table t_f1(id decimal(10,0),id2 decimal(10,0),id3 date,id4 date,id5 float,id6 float,id7 varchar(30),id8 varchar(300));
@@ -174,7 +174,7 @@ After the data is imported, check the number of records in the table and the spa
 
 1. The table contains 50 million records. 
 
-   ```sql
+   ```shell
    obclient [test]> select count(*) from t_f1;
    +----------+
    | count(*) |
@@ -187,15 +187,15 @@ After the data is imported, check the number of records in the table and the spa
 
    To check the compression results of baseline data, log on to your OceanBase database as the administrator of the sys tenant and trigger a major compaction to compact and compress the incremental data and baseline data. You can execute the following SQL statement to trigger a major compaction. 
 
-   ```sql
+   ```shell
    obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p -c
    obclient[oceanbase]> ALTER SYSTEM MAJOR FREEZE;
    ```
 
 3. Execute the following SQL statement to query the status of the major compaction. If the statement returns IDLE, the major compaction is completed. 
 
-   ```sql
-   MySQL [oceanbase]> select name,info from __all_zone where zone='' and name = 'merge_status';
+   ```shell
+   obclient [oceanbase]> select name,info from __all_zone where zone='' and name = 'merge_status';
    +--------------+------+
    | name         | info |
    +--------------+------+
@@ -206,7 +206,7 @@ After the data is imported, check the number of records in the table and the spa
 
 4. Execute the following SQL statement in the sys tenant to query the space occupied by the imported data: 
 
-   ```sql
+   ```shell
    obclient [oceanbase]> select b.table_name,svr_ip,role,a.data_size/1024/1024/1024 from __all_virtual_meta_table a,__all_virtual_table b where a.role=1 and a.table_id=b.table_id and b.table_name='T_F1';
    +------------+---------------+------+----------------------------+
    | table_name | svr_ip        | role | a.data_size/1024/1024/1024 |
