--- a/en-US/7.reference/7.command-line-tools/7.ob-admin/6.dump_backup.md
+++ b/en-US/7.reference/7.command-line-tools/7.ob-admin/6.dump_backup.md
@@ -6,7 +6,7 @@ dump_backup is a feature of ob_admin that parses the data content for physical b
 
 You can run the following command to check how to use dump_backup:
 
-```SQL
+```shell
 ./ob_admin dump_backup --help
 ```
 
