--- a/en-US/7.reference/7.command-line-tools/8.ob-agent/2.configuration-reference/2.monagent-configuration-file.md
+++ b/en-US/7.reference/7.command-line-tools/8.ob-agent/2.configuration-reference/2.monagent-configuration-file.md
@@ -17,8 +17,8 @@ log:
 
 ## Process-related configuration. address specifies the default API for metrics pulling and management. adminAddress specifies the port for pprof debugging.
 server:
-  address: "0.0.0.0:8088"
-  adminAddress: "0.0.0.0:8089"
+  address: "xxx.xxx.xxx.xxx:8088"
+  adminAddress: "xxx.xxx.xxx.xxx:8089"
   runDir: run
 
 ## Parameters related to configuration. The parameters can be encrypted by using AES algorithm or left in plain text. If you want to encrypt the configuration items, use the key file in the following path.
