--- a/en-US/7.reference/7.command-line-tools/8.ob-agent/3.install-and-deploy-obagent/3.use-obd-to-deploy-obagent.md
+++ b/en-US/7.reference/7.command-line-tools/8.ob-agent/3.install-and-deploy-obagent/3.use-obd-to-deploy-obagent.md
@@ -17,7 +17,7 @@ If you want to deploy the OceanBase cluster and OBAgent at the same time, add th
 ```unknow
 obagent:
   servers:
-    - 127.0.0.1
+    - xxx.xxx.xxx.xxx
   depends:
     - oceanbase-ce
   global:
