--- a/zh-CN/7.reference/7.command-line-tools/11.dooba.md
+++ b/zh-CN/7.reference/7.command-line-tools/11.dooba.md
@@ -21,7 +21,7 @@ DOOBA 使用命令如下：
 python dooba.py -h ODP地址 -u root@sys#集群名 -P ODP端口 -p密码
 
 // 例如：
-python dooba.py -h 172.20.249.54 -u root@sys#obce-3zones -P 2883 -pxxxxxx
+python dooba.py -h xxx.xxx.xxx.xxx -u r***@sys#obce-3zones -P 2883 -pxxxxxx
 ```
 
 登录后常用的快捷键如下：
@@ -51,7 +51,7 @@ python dooba.py -h 172.20.249.54 -u root@sys#obce-3zones -P 2883 -pxxxxxx
 
 DOOBA 的性能数据取自 SYS 租户的内部视图 `gv$sysstat`。DOOBA 的监控信息均可使用 SQL 语句直接查看，可以参考 DOOBA 做类似的监控产品。
 
-```unknow
+```sql
 # 取 QPS 和 RT 信息
 SELECT t1.con_id tenant_id,t2.zone, t1.svr_ip,t1.svr_port , t1.stat_id, t1.name, t1.value 
 FROM gv$sysstat t1 JOIN  __all_server t2 ON (t1.svr_ip=t2.svr_ip and t1.svr_port=t2.svr_port) JOIN __all_resource_pool t3 ON (t1.con_id=t3.tenant_id) JOIN __all_unit_config t4 ON (t3.unit_config_id=t4.unit_config_id) 
@@ -119,7 +119,7 @@ ORDER BY t1.con_id, t2.zone, t1.svr_ip, t1.svr_port;
 
 使用快捷键 `3` 可查看租户各个节点的性能概览，主要查看租户在各个节点使用 SQL 语句的 QPS、RT 以及一些缓存命中率等。
 
-```unknow
+```sql
 # 取节点 CPU
 SELECT t1.con_id tenant_id,t2.zone, t1.svr_ip,t1.svr_port , round(t1.value/(100*t4.max_cpu), 3) cpu_usage 
 FROM gv$sysstat t1 JOIN  __all_server t2 ON (t1.svr_ip=t2.svr_ip and t1.svr_port=t2.svr_port) JOIN __all_resource_pool t3 ON (t1.con_id=t3.tenant_id) JOIN __all_unit_config t4 ON (t3.unit_config_id=t4.unit_config_id) 
