--- a/zh-CN/7.reference/7.command-line-tools/8.ob-agent/5.obagent-development-guide.md
+++ b/zh-CN/7.reference/7.command-line-tools/8.ob-agent/5.obagent-development-guide.md
@@ -12,7 +12,7 @@ OBAgent 的数据处理流程包括数据采集、处理和上报，需要用到
 
 所有的 OBAgent 插件都必须实现以下的基本接口：
 
-```unknow
+```java
 //Initializer 包含 Init 函数
 type Initializer interface {
     Init(config map[string]interface{}) error
@@ -52,7 +52,7 @@ OBAgent 支持的插件类型见下表：
 
 ### 输入插件接口定义
 
-```unknow
+```java
 type Input interface {
     Collect() ([]metric.Metric, error)
 }
@@ -62,7 +62,7 @@ type Input interface {
 
 ### 处理插件接口定义
 
-```unknow
+```java
 type Processor interface {
     Process(metrics ...metric.Metric) ([]metric.Metric, error)
 }
@@ -72,7 +72,7 @@ type Processor interface {
 
 ### 输出插件（Exporter）接口定义
 
-```unknow
+```java
 type Exporter interface {
     Export(metrics []metric.Metric) (*bytes.Buffer, error)
 }
@@ -82,7 +82,7 @@ type Exporter interface {
 
 ### 输出插件（Output）接口定义
 
-```unknow
+```java
 type Output interface {
     Write(metrics []metric.Metric) error
 }
@@ -94,7 +94,7 @@ type Output interface {
 
 OBAgent 数据处理流程中流转的数据定义为统一的 Metric 接口。
 
-```unknow
+```java
 type Metric interface {
         Clone() Metric
         SetName(name string)
