--- a/en-US/7.reference/7.command-line-tools/11.dooba.md
+++ b/en-US/7.reference/7.command-line-tools/11.dooba.md
@@ -20,7 +20,7 @@ Run the following command to use DOOBA:
 python dooba.py -h OBProxy address -u root@sys#cluster name -P OBProxy port number -p password
 
 // For example:
-python dooba.py -h 172.20.249.54 -u root@sys#obce-3zones -P 2883 -pxxxxxx
+python dooba.py -h xxx.xxx.xxx.xxx -u r***@sys#obce-3zones -P 2883 -pxxxxxx
 ```
 
 After you log on to the cluster, use the following shortcut keys to view the performance information:
