--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -100,17 +100,17 @@ bash ./run.sh start
 ```java
 ObReaderConfig config = new ObReaderConfig();
 // 设置OceanBase root server 地址列表，格式为（可以支持多个，用';'分隔）：ip1:rpc_port1:sql_port1;ip2:rpc_port2:sql_port2
-config.setRsList("127.0.0.1:2882:2881;127.0.0.2:2882:2881");
+config.setRsList("xxx.xxx.xxx.1:2882:2881;xxx.xxx.xxx.2:2882:2881");
 // 设置用户名和密码（非系统租户）
-config.setUsername("root");
-config.setPassword("root");
+config.setUsername("r***");
+config.setPassword("****");
 // 设置启动位点（UNIX时间戳，单位s）, 0表示从当前时间启动。
 config.setStartTimestamp(0L);
 // 设置订阅表白名单，格式为：tenant.db.table, '*'表示通配.
 config.setTableWhiteList("sys.*.*");
 
 // 指定oblogproxy服务地址，创建实例.
-LogProxyClient client = new LogProxyClient("127.0.0.1", 2983, config);
+LogProxyClient client = new LogProxyClient("xxx.xxx.xxx.1", 2983, config);
 // 添加 RecordListener
 client.addListener(new RecordListener() {
     @Override
