--- a/zh-CN/7.reference/7.command-line-tools/7.ob-admin/1.overview-of-ob-admin.md
+++ b/zh-CN/7.reference/7.command-line-tools/7.ob-admin/1.overview-of-ob-admin.md
@@ -20,7 +20,7 @@ ob_admin 是 OceanBase 数据库的配套运维工具之一，本文介绍了 ob
 
 ## ob_admin 功能介绍
 
-ob_admin 提供了 slog_tool、clog_tool、dumpsst 和 dump_backup 功能，主要用于排查数据不一致、丢数据、错误数据等问题。下面分别从各个子功能来简要介绍一下 ob_admin。
+ob_admin 提供了 slog_tool、log_tool、dumpsst 和 dump_backup 功能，主要用于排查数据不一致、丢数据、错误数据等问题。下面分别从各个子功能来简要介绍一下 ob_admin。
 
 ### slog_tool
 
@@ -35,15 +35,15 @@ $./ob_admin slog_tool -f ../store/slog/1
     <p>slog_tool 对路径格式有要求，需要以点（.）或斜线（/）开头。</p>
   </main>
 
-### clog_tool
+### log_tool
 
-clog_tool 主要具有以下功能：
+log_tool 主要具有以下功能：
 
 * 提供 `dump clog` 文件中的日志内容。
 * 统计 clog 文件中各模块占比。
 * 指定字段查找日志。
 
-具体用法请参见 [clog_tool](../7.ob-admin/3.clog/3.clog-tool.md)。
+具体用法请参见 [log_tool](../7.ob-admin/3.clog/3.clog-tool.md)。
 
 ### dumpsst
 
