--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
@@ -502,7 +502,7 @@ In the test environment prepared for automatically running the TPC-H benchmark, 
 First, log on to your OceanBase database from OBClient. If you do not have OBClient, you can use a MySQL client instead. 
 
 ```test
-obclient -h127.0.0.1 -P2881 -uroot@test -Dtest -A -p -c
+obclient -hxxx.xxx.xxx.xxx -P2881 -ur***@test -Dtest -A -p -c
 ```
 
 Before you start running the benchmark, set the degree of parallelism (DOP) based on the configurations of the OceanBase cluster and the tenant. We recommend that you set the DOP to be no more than twice the number of CPU cores of your tenant. For example, if your tenant has a maximum of 8 CPU cores, you can set the DOP to 16:
