--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallel-import-and-data-compression.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallel-import-and-data-compression.md
@@ -142,7 +142,7 @@ OceanBase Database allows you to import data from CSV files in multiple ways. Th
 3. Create a table named t_f1 in the test database of the test tenant. For more information about how to create a tenant, see Manage tenants. 
 
    ```shell
-   obclient -h127.0.0.1 -P2881 -uroot@test -Dtest -A -p -c
+   obclient -hxxx.xxx.xxx.xxx -P2881 -ur***@test -Dtest -A -p -c
 
    obclient [test]>create table t_f1(id decimal(10,0),id2 decimal(10,0),id3 date,id4 date,id5 float,id6 float,id7 varchar(30),id8 varchar(300));
    ```
