--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallelly-importing-and-data-compression.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallelly-importing-and-data-compression.md
@@ -11,7 +11,7 @@
 首先，复制 `lineitem` 的表结构，创建 `lineitem2`。注意，在 OceanBase 数据库中我们使用分区表进行数据扩展，此处的例子中我们使用 16 个分区，那么对应的 `lineitem2` 也应完全相同：
 
 ```shell
-obclient> SHOW CREATE TABLE lineitem\G;
+obclient [test]> SHOW CREATE TABLE lineitem\G;
 *************************** 1. row ***************************
        Table: lineitem
 
@@ -61,13 +61,13 @@ Create Table: CREATE TABLE `lineitem` (
 创建好 `lineitem2` 后，我们先以默认配置不开启并行的方式插入, 因为这是一个 600 万行的大事务，我们需要将 OceanBase 数据库默认的事务超时时间调整到更大的值（单位为 μs）：
 
 ```shell
-SET ob_query_timeout = 1000000000;  
-SET ob_trx_timeout = 1000000000;  
+obclient [test]> SET ob_query_timeout = 1000000000;  
+obclient [test]> SET ob_trx_timeout = 1000000000;  
 ```
 
 插入数据，执行结果如下：
 
-```sql
+```shell
 obclient [test]> INSERT INTO lineitem2 SELECT * FROM lineitem;
 Query OK, 6001215 rows affected (1 min 47.312 sec)
 Records: 6001215  Duplicates: 0  Warnings: 0
@@ -82,17 +82,17 @@ Records: 6001215  Duplicates: 0  Warnings: 0
 下面我们通过添加一个 Hint，开启 PDML 的执行选项。注意再次插入前，我们先将上次插入的数据清空。
 
 ```shell
-TRUNCATE TABLE lineitem2;
-INSERT /*+ parallel(16) enable_parallel_dml */ INTO lineitem2 SELECT * FROM lineitem;
+obclient [test]> TRUNCATE TABLE lineitem2;
+obclient [test]> INSERT /*+ parallel(16) enable_parallel_dml */ INTO lineitem2 SELECT * FROM lineitem;
 ```
 
 来看这次的执行耗时：
 
 ```sql
-obclient> TRUNCATE TABLE lineitem2;
+obclient [test]> TRUNCATE TABLE lineitem2;
 Query OK, 0 rows affected (0.108 sec)
 
-obclient> INSERT /*+ parallel(16) enable_parallel_dml */ INTO lineitem2 SELECT * FROM lineitem;
+obclient [test]> INSERT /*+ parallel(16) enable_parallel_dml */ INTO lineitem2 SELECT * FROM lineitem;
 Query OK, 6001215 rows affected (22.117 sec)
 Records: 6001215  Duplicates: 0  Warnings: 0
 ```
@@ -109,7 +109,7 @@ OceanBase 数据库基于 LSM-Tree 结构开发了自己的存储引擎。其中
 
 首先我们使用数据准备工具 [CreateData.jar](https://lark-assets-prod-aliyun.oss-accelerate.aliyuncs.com/lark/0/2022/jar/99622/1659402075309-3195cacf-c820-4d3a-98b0-ef1b6f4d2bf5.jar?OSSAccessKeyId=LTAI4GGhPJmQ4HWCmhDAn4F5&Expires=1662013452&Signature=zfgOsOzKSRYayaYkyO8BpQULUFw%3D&response-content-disposition=attachment%3Bfilename*%3DUTF-8%27%27CreateData.jar) 生成 5 千万行模拟数据到 `/home/soft` 目录下，生成数据大概需要十几分钟时间，您也可以使用其他工具生成测试数据。
 
-```sql
+```shell
 #mkdir /home/soft/
 #java -jar CreateData.jar /home/soft/ 50000000
 filePath is : /home/soft/
@@ -123,9 +123,9 @@ OceanBase 数据库支持多种方式将 csv 格式的数据导入到 OceanBase 
 
 1. 首先您需对生成的文件进行命名，并确认实际大小。
 
-    ```bash
-    mv t_bigdata_loader.unl t_f1.csv
-    du -sh t_f1.csv
+    ```shell
+    #mv t_bigdata_loader.unl t_f1.csv
+    #du -sh t_f1.csv
     10G     t_f1.csv
     ```
 
@@ -142,8 +142,7 @@ OceanBase 数据库支持多种方式将 csv 格式的数据导入到 OceanBase 
 3. 在 `test` 租户下的 `test` 数据库中创建一张表，表名为 `t_f1`。详细的租户创建过程，请参考管理租户内容。
 
     ```shell
-    # obclient -hxxx.xxx.xxx.xxx -P2881 -ur***@test  -Dtest -A -p -c
-
+    #obclient -hxxx.xxx.xxx.xxx -P2881 -ur***@test  -Dtest -A -p -c
     obclient [test]> CREATE TABLE t_f1(id DECIMAL(10,0),id2 DECIMAL(10,0),id3 DATE,id4 DATE,id5 FLOAT,id6 FLOAT,id7 VARCHAR(30),id8 VARCHAR(300));
     ```
 
@@ -151,9 +150,9 @@ OceanBase 数据库支持多种方式将 csv 格式的数据导入到 OceanBase 
 
 我们可以使用 OceanBase 数据库内置的 Load Data 命令导入数据，Load Data 同样支持并行导入。开始导入前进行如下设置。Load Data 命令仅支持数据文件在 OBServer 节点本地执行，如果您希望远程进行数据导入，可以参考使用 OceanBase 数据库的 obloader 工具。
 
-```sql
-SET GLOBAL secure_file_priv = "";
-GRANT FILE ON *.* to username;
+```shell
+obclient [test]> SET GLOBAL secure_file_priv = "";
+obclient [test]> GRANT FILE ON *.* to username;
 ```
 
   <main id="notice" type='notice'>
