--- a/zh-CN/7.reference/7.command-line-tools/7.ob-admin/5.dumpsst.md
+++ b/zh-CN/7.reference/7.command-line-tools/7.ob-admin/5.dumpsst.md
@@ -1,90 +1,55 @@
 # dumpsst
 
-dumpsst displays the content in block_file, such as superblocks, macroblocks, macroblock meta, sstable, and sstable meta. Generally, you can use it to trace online issues and locate data issues. This topic describes how to use dumpsst.
+dumpsst 用来显示 block_file 文件中的内容，可以通过 macro block 调查追溯线上问题，定位数据问题等。本文将介绍如何使用 dumpsst。
 
-Command syntax:
+您可使用该命令输出 dumpsst 的使用方法。
 
-```bash
+```shell
+$ ./ob_admin dumpsst --help
+succ to open, filename=ob_admin.log, fd=3, wf_fd=2
+old log_file need close, old = ob_admin.log new = ob_admin.log
+succ to open, filename=ob_admin.log, fd=3, wf_fd=2
+succ to open, filename=ob_admin_rs.log, fd=4, wf_fd=2
 
 Usage: dumpsst command [command args] [options]
 commands:
-        -d,--dump                     dump, args: [super_block|print_macro|macro_block|macro_meta|sstable|sstable_meta]
+        -d,--dump                     dump, arg：[macro_block]
         -h,--help                     display this message.
 options:
-        -f,--data-file-name           data file path
-        -a,--macro-id                 macro block index
+        -f,--data-file-name           data file path or the ofs address
+        -a,--macro-id                 macro block id
         -i,--micro-id                 micro block id, -1 means all micro blocks
         -n,--macro-size               macro block size, in bytes
         -q,--quiet                    log level: ERROR
-        -t,--table-key                table key: table_type,table_id:partition_id,index_id,base_version:multi_version_start:snapshot_version,start_log_ts:end_log_ts:max_log_ts,major_version
-        -s,--skip_replay              skip slog replay, only work for macro_block mode
+        -x,--hex-print                print obj value in hex mode
+        -k,--master_key               master key, hex str
+        -m,--master_key_id            master key id
+        -t,--tablet_id                tablet id
+        -s,--logical_version          macro block logical version
 samples:
-  dump all metas and rows in macro:
-        ob_admin dumpsst -d pm -f block_file_path -a macro_id -i micro_id
   dump all rows in macro:
-        ob_admin dumpsst -d macro_block -f block_file_path -a macro_id -i micro_id: dump rows in macro
+        ob_admin -d macro_block -f block_file_path -a macro_id
+  dump specified block in the shared block:
+        ob_admin -d macro_block -f block_file_path -a macro_id -t tablet_id -s logical_version
 ```
 
-The following sections describe the general usage of dumpsst.
-
-## super_block
-
-You can use dumpsst to print the content of a superblock. Command syntax:
-
-```bash
-$./ob_admin dumpsst -f /home/admin/ob1.obs0/store -d super_block
-$./ob_admin dumpsst -f /home/admin/ob1.obs0/store -d sb
-```
-
-In the preceding commands, `-f` specifies the absolute path of the folder where the data file is located, and `-d` specifies the dump content. Superblock can be shortened as `sb`.
-
-The following example shows the content of a superblock:
-
-![Content of a superblock](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6606618361/p360259.png)
+下面介绍一个 dumpsst 的常见用法。
 
 ## macro_block
 
-You can run the following commands to display the content of an SSTable macroblock, including the common header, SSTable header, microblock index, microblock header, and each data row. These commands are most frequently used. Command syntax:
+您可使用以下命令显示 SSTable 数据块内容，包括宏块 common header，macro header，微块索引信息，微块头和每条数据。这是一条最常用的命令，格式如下：
 
 ```bash
-# Local mode:
-./ob_admin dumpsst -f /home/admin/ob1.obs0/store -d mb -a 13 -s
-./ob_admin dumpsst -f /home/admin/ob1.obs0/store -d macro_block -a 13 -s
+# 本地模式：
+./ob_admin -d macro_block -f block_file_path -a macro_id
+./ob_admin -d macro_block -f block_file_path -a macro_id -t tablet_id -s logical_version
 ```
 
-In the preceding commands, `-f` specifies the absolute path of the folder where the data file is located, `-a` specifies the subscript of the macroblock, and `-d` specifies the dump content.
+参数说明：
 
-> **Notice**
->
-> When you use dumpsst to view the layout of a macroblock, you must add `-s`. Otherwise, a display error occurs.
 
-## macro_meta
-
-You can run the following commands to print the macroblock metadata. Command syntax:
-
-```bash
-$./ob_admin dumpsst -f /home/admin/ob1.obs0/store -d macro_meta -a 15
-$./ob_admin dumpsst -f /home/admin/ob1.obs0/store -d mm -a 15
-```
-
-In the preceding commands, `-f` specifies the absolute path of the folder where the data file is located, `-a` specifies the subscript of the macroblock, and `-d` specifies the dump content. Macroblock meta can be shortened as `mm`.
-
-## sstable
-
-The sstable mode is similar to the macro_block mode and can be used to display all macroblocks related to the specified SSTable. The input parameter is -t tablekey. Command syntax:
-
-```bash
-./ob_admin dumpsst -d sstable -f ./store/ -t 1,1100611139453777:0,1100611139453777,0:1637564201580068:1637564201580068,0:0:0,4
-```
-
-## sstable_meta
-
-The sstable_meta mode is similar to the macro_meta mode and can be used to display all macroblock metadata related to the specified SSTable. The input parameter is -t tablekey. Command syntax:
-
-```bash
-./ob_admin dumpsst -d sstable_meta -f ./store/ -t 1,1100611139453777:0,1100611139453777,0:1637564201580068:1637564201580068,0:0:0,4
-```
-
-> **Notice**
->
-> You can run ob_admin only in the `home` directory of OceanBase Database. In other words, the current working directory of dumpsst must be the `home` directory of OceanBase Database.
+* `-d`：dump 宏块类型，目前只支持 `macro_block`。
+* `-f`：指定数据文件所在文件夹的绝对路径。
+* `-a`：指定宏块的下标。
+* `-t`：指定分片的下标。
+* `-s`：指定宏块的逻辑版本号。
