--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/16.recover.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/16.recover.md
@@ -9,19 +9,19 @@
 ```sql
 /* 恢复到指定时间戳*/
 ALTER SYSTEM RECOVER STANDBY 
-      [TENANT tenant_name] UNTIL TIME 'timestamp'
+      [TENANT tenant_name] UNTIL TIME='timestamp';
 
 /* 恢复指定 SCN */
 ALTER SYSTEM RECOVER STANDBY 
-      [TENANT tenant_name] UNTIL SCN scn_no
+      [TENANT tenant_name] UNTIL SCN=scn_no;
 
 /* 恢复无终点*/
 ALTER SYSTEM RECOVER STANDBY 
-      [TENANT tenant_name] UNTIL UNLIMITED
+      [TENANT tenant_name] UNTIL UNLIMITED;
       
 /* 取消使用归档 redo log 恢复数据库 */
 ALTER SYSTEM RECOVER STANDBY 
-      [TENANT tenant_name] CANCEL
+      [TENANT tenant_name] CANCEL;
 ```
 
 <main id="notice" type='explain'>
@@ -35,7 +35,7 @@ ALTER SYSTEM RECOVER STANDBY
 | **字段** | **说明** |
 | --- | --- |
 | timestamp | 指定恢复的时间戳。 |
-| scn_no | 指定恢复的 SCN（System Change Number），包括该 SCN 位点，指定 SCN 须以 `=` 连接。。 |
+| scn_no | 指定恢复的 SCN（System Change Number），包括该 SCN 位点，指定 SCN 须以 `=` 连接。 |
 | UNLIMITED | 指定恢复无终点，持续回放归档源端日志。 |
 
 ## 示例
