--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/3.backup.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/3.backup.md
@@ -23,7 +23,7 @@ ALTER SYSTEM SET DATA_BACKUP_DEST = 'data_backup_path';
 ALTER SYSTEM BACKUP DATABASE;
 
 /* 系统租户对集群中的指定租户发起全量数据备份 */
-ALTER SYSTEM BACKUP TENANT = tenant_name;
+ALTER SYSTEM BACKUP TENANT [=] tenant_name;
 
 /* 用户租户对本租户发起全量数据备份 */
 ALTER SYSTEM BACKUP DATABASE;
@@ -49,7 +49,7 @@ ALTER SYSTEM BACKUP INCREMENTAL DATABASE;
 ALTER SYSTEM CANCEL BACKUP;
 
 /* 系统租户停止集群中指定租户的数据备份任务 */
-ALTER SYSTEM CANCEL BACKUP TENANT [=] tenant_name;
+ALTER SYSTEM CANCEL BACKUP TENANT = tenant_name;
 
 /* 用户租户停止本租户正在执行的数据备份任务 */
 ALTER SYSTEM CANCEL BACKUP;
