【信息已经不符了】有很多在4版本里不支持了
__all_zone里已经没有记载frozen_version信息了，已经要通过scn来查了。需要改成4.1的版本了。

--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/2.experience-operational-olap.md
@@ -409,7 +409,7 @@ use $db_name;
    ```
 
 5. 查看合并是否完成。
-
+   ----------这里的是3的版本才有的，4版本后已经不能在这里查了
    ```sql
    MySQL [oceanbase]> SELECT name,value FROM oceanbase.__all_zone WHERE name='frozen_version' OR name='last_merged_version';
    +---------------------+-------+
