--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/9.database-object-reference-method-of-oracle-mode/3.reference-objects-in-a-remote-database-of-oracle-mode/2.reference-database-links.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/9.database-object-reference-method-of-oracle-mode/3.reference-objects-in-a-remote-database-of-oracle-mode/2.reference-database-links.md
@@ -2,12 +2,4 @@
 
 当您发出包含数据库链接的 SQL 语句时，需要使用存储在数据字典中的完整数据库链接名称。
 
-OceanBase 数据库在连接远程数据库时，将使用数据库连接字符串访问远程数据库。使用数据库字符串、用户名和密码后连接成功，则 OceanBase 数据库使用引用 Schema 对象中的规则来访问远程数据库上的指定对象，但请注意如下相关限制：
-
-* 只能执行只读语句。
-
-* 只能访问表对象，不支持访问其它对象，例如视图、序列等。
-
-* 访问表对象时必须显式指定数据库名，例如：`test.t1@my_link`。
-
-* 不支持部分计划和算子：
+OceanBase 数据库在连接远程数据库时，将使用数据库连接字符串访问远程数据库。使用数据库字符串、用户名和密码后连接成功，则 OceanBase 数据库使用引用 Schema 对象中的规则来访问远程数据库上的指定对象。
