--- a/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/1.Experience-Scalable-OLTP/1.TPC-C-test-on-OceanBase.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/1.Experience-Scalable-OLTP/1.TPC-C-test-on-OceanBase.md
@@ -301,7 +301,7 @@ create  index bmsql_oorder_idx1
 在开始性能测试之前，建议您先登录到 sys 租户使用管理员账号做一次集群合并（ major freeze ），获得更好的测试结果。您可以通过如下的方式手动触发合并。当然，这个过程并不是必须的。
 
 ```sql
-obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p -c
+obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p****** -c
 obclient[oceanbase]> ALTER SYSTEM MAJOR FREEZE;
 ```
 
