--- a/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/3.Experience-Parallel-Import-and-Data-Compression.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/3.Experience-Parallel-Import-and-Data-Compression.md
@@ -146,7 +146,7 @@ OceanBase 支持多种方式将 csv 格式的数据导入到 OceanBase 中，本
 3. 在租户 test 下的 test 数据库中创建一张表，表名为 t_f1。详细的租户创建过程，请参考管理租户内容。
 
     ```sql
-    obclient -h127.0.0.1 -P2881 -uroot@test  -Dtest -A -p -c
+    obclient -h127.0.0.1 -P2881 -uroot@test  -Dtest -A -p****** -c
 
     obclient [test]>create table t_f1(id decimal(10,0),id2 decimal(10,0),id3 date,id4 date,id5 float,id6 float,id7 varchar(30),id8 varchar(300));
     ```
@@ -192,7 +192,7 @@ load data /*+ parallel(16) */ infile '/home/soft/t_f1.csv' into table t_f1 field
    为了查看基线数据的压缩效果，我们使用 sys 租户管理员登录，主动触发对数据库进行合并，使增量数据可以和基线数据进行合并与压缩。您可以通过如下的方式手动触发合并。
 
     ```sql
-    obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p -c
+    obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p****** -c
     obclient[oceanbase]> ALTER SYSTEM MAJOR FREEZE;
     ```
 
