--- a/zh-CN/1.users-guide/3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md
+++ b/zh-CN/1.users-guide/3.installation-and-deployment/15.deploy-oceanbase-database-in-the-production-environment.md
@@ -309,7 +309,7 @@ alien --scripts -i obclient-x.x.x.el7.x86_64.rpm
 运行以下命令，使用 OBClient 客户端连接 OceanBase 数据库：
 
 ```bash
-obclient -h<IP> -P<PORT> -uroot@sys -p
+obclient -h<IP> -P<PORT> -uroot@sys -p******
 ```
 
 其中，`IP` 为 OBServer 节点的 IP 地址；`PORT` 为连接 OceanBase 数据库的的端口，直连时为 `mysql_port` 配置项的值，通过 ODP 连接时为 `listen_port` 配置项的值。
