--- a/zh-CN/1.users-guide/4.data-migration/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
+++ b/zh-CN/1.users-guide/4.data-migration/7.use-canal-to-synchronize-MySQL-data-to-OceanBase-database-in-real-time.md
@@ -115,7 +115,7 @@ FLUSH PRIVILEGES;
       minimum-idle: 1
   canal:
     adminUser: admin
-    adminPasswd: admin
+    adminPasswd: ******
   ```
 
   初次测试时，建议不要修改上面密码 `adminPasswd`，以免后面密码修改不对导致连接不上。
@@ -123,7 +123,7 @@ FLUSH PRIVILEGES;
 * 初始化元数据库
 
   ```sql
-  mysql -h127.1 -uroot -P3306 -p
+  mysql -h127.1 -uroot -P3306 -p*****
   source conf/canal_manager.sql
   ```
 
