--- a/zh-CN/1.users-guide/5.database-connection-and-routing/4.administrator-guide-connect-to-oceanbase-database/2.administrator-guide-connect-to-oceanbase-database-through-a-mysql-client.md
+++ b/zh-CN/1.users-guide/5.database-connection-and-routing/4.administrator-guide-connect-to-oceanbase-database/2.administrator-guide-connect-to-oceanbase-database-through-a-mysql-client.md
@@ -25,13 +25,13 @@
    * 通过 OBProxy 连接的方式
 
      ```sql
-     $mysql -h10.10.10.1 -u****@obmysql#obdemo -P2883 -ppassword -c -A oceanbase
+     $mysql -h10.10.10.1 -u****@obmysql#obdemo -P2883 -p****** -c -A oceanbase
      ```
 
      或者
 
      ```sql
-     $mysql -h10.10.10.1 -uobdemo:obmysql:**** -P2883 -ppassword -c -A oceanbase
+     $mysql -h10.10.10.1 -uobdemo:obmysql:**** -P2883 -p****** -c -A oceanbase
      ```
 
      >**说明**
@@ -53,7 +53,7 @@
    * 通过直连方式
 
      ```sql
-     $mysql -h10.10.10.1 -uusername@obmysql -P2881 -ppassword -c -A oceanbase
+     $mysql -h10.10.10.1 -uusername@obmysql -P2881 -p****** -c -A oceanbase
      ```
 
      >**说明**
