--- a/zh-CN/1.users-guide/9.performance-tuning-guide/8.performance-whitepaper/1.run-the-tpc-h-benchmark-on-oceanbase-database.md
+++ b/zh-CN/1.users-guide/9.performance-tuning-guide/8.performance-whitepaper/1.run-the-tpc-h-benchmark-on-oceanbase-database.md
@@ -522,7 +522,7 @@ use $db_name;
    [wieck@localhost queries] $ vim tpch.sh
 
    #!/bin/bash
-   TPCH_TEST="obclient -h $host_ip -P $host_port -utpch_100g_part@tpch_mysql  -D tpch_100g_part  -ptest -c"
+   TPCH_TEST="obclient -h $host_ip -P $host_port -utpch_100g_part@tpch_mysql  -D tpch_100g_part  -p****** -c"
    # warmup预热
    for i in {1..22}
    do
