--- a/zh-CN/14.developer-guide/1.application-development/6.connect-to-oceanbase-through-golang-driver.md
+++ b/zh-CN/14.developer-guide/1.application-development/6.connect-to-oceanbase-through-golang-driver.md
@@ -133,9 +133,9 @@ func select_all() {
 
 ```go
 //格式
-conn := "{username}:{password}@tcp({hostname}:{port})/{dbname}"
+conn := "{username}:{$password}@tcp({hostname}:{port})/{dbname}"
 //示例
-conn := "root:@tcp(127.0.0.1:2881)/test"
+conn := "root:******@tcp(127.0.0.1:2881)/test"
 ```
 
 参数说明：
