--- a/zh-CN/18.supporting-tools/1.ob-admin/2.archive_tool.md
+++ b/zh-CN/18.supporting-tools/1.ob-admin/2.archive_tool.md
@@ -42,7 +42,7 @@ ob_admin archive_tool dump_key archive_key_files
 此外，如果包含加密数据文件，并且需要查看这些加密内容，您可以指定能够获取主密钥的地址，例如：
 
 ```unknow
-ob_admin archive_tool dump_log data_files -h 127.0.0.1 -p 12345 -t tenant_id
+ob_admin archive_tool dump_log data_files -h 127.0.0.1 -p ****** -t tenant_id
 # 该命令会试图从 127.0.0.1:12345 处获取主密钥解析加密日志
 ```
 
