--- a/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/1.Experience-Scalable-OLTP/2.Experience-OceanBase-hot-row-update-capability.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/1.Experience-Scalable-OLTP/2.Experience-OceanBase-hot-row-update-capability.md
@@ -102,7 +102,7 @@ TPS on Hot Row: 1834.86 /s
 接下来我们开启OceanBase的热点行功能，首先需要登录到sys管理员租户
 
 ```shell
-[root@obce00 ~]# obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p -c
+[root@obce00 ~]# obclient -h127.0.0.1 -P2881 -uroot@sys  -Doceanbase -A -p****** -c
 ```
 
 然后进行如下两个参数的设置。其中enable_early_lock_release参数的生效范围，既可以指定具体租户，也可以指定全部租户tenant=all
