--- a/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/2.Experience-Operational-OLAP.md
+++ b/zh-CN/1.users-guide/2.Get-started-quickly/3.Experience-the-advanced-features-of-OceanBase/2.Experience-Operational-OLAP.md
@@ -19,7 +19,7 @@ sudo yum install obtpch
 
 ```test
 cd /tmp
-obd test tpch obtest --tenant=test -s 1 --password='' --remote-tbl-dir=/tmp/tpch1 
+obd test tpch obtest --tenant=test -s 1 --password='******' --remote-tbl-dir=/tmp/tpch1 
 ```
 
 >**说明**
@@ -40,7 +40,7 @@ obd test tpch obtest --tenant=test -s 1 --password='' --remote-tbl-dir=/tmp/tpch
 我们先使用 OBClient 登录到数据库中，如果您没有安装 OBClient，使用 MySQL 客户端也是可以的。
 
 ```test
-obclient -h127.0.0.1 -P2881 -uroot@test  -Dtest -A -p -c
+obclient -h127.0.0.1 -P2881 -uroot@test  -Dtest -A -p****** -c
 ```
 
 在开始之前，您需要根据 OceanBase 集群和租户的配置，进行并行度的设置，具体大小建议不超过当前租户配置的 CPU 核数的 2 倍。例如您的租户 CPU 最大配置为 8，那么此处建议并行度设置为 16：
