--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
@@ -14,7 +14,7 @@
 
      <main id="notice" type='notice'>
      <h4>注意</h4>
-     <p>为了保证备份点位后的日志均能被归档，必须先开启主租户的日志归档后，再执行数据备份。</p>
+     <p>为了保证数据备份期间的日志均能被归档，必须先开启主租户的日志归档后，再执行数据备份。</p>
      </main>
 
   2. 主租户已开启租户的数据备份功能，并完成了一次全量备份。
@@ -29,7 +29,7 @@
 
       <main id="notice" type='notice'>
       <h4>注意</h4>
-      <p>为了保证备份点位后的日志都能被归档，必须先开启该备租户的日志归档后，再执行数据备份。</p>
+      <p>为了保证数据备份期间的日志都能被归档，必须先开启该备租户的日志归档后，再执行数据备份。</p>
       </main>
 
   2. 作为恢复源的备租户已开启租户的数据备份功能，并完成了一次全量备份。
@@ -45,7 +45,7 @@
    语句如下：
 
    ```sql
-   ALTER SYSTEM RESTORE standby_tenant_name FROM uri UNTIL TIME = timestamp WITH restore_option [DESCRIPTION description];
+   ALTER SYSTEM RESTORE standby_tenant_name FROM uri UNTIL TIME =timestamp WITH restore_option [DESCRIPTION description];
    ```
 
    相关参数说明如下：
@@ -85,7 +85,7 @@
    * 恢复到指定时间戳
 
      ```sql
-     ALTER SYSTEM RECOVER STANDBY [TENANT = tenant_name] UNTIL TIME 'timestamp';
+     ALTER SYSTEM RECOVER STANDBY [TENANT = tenant_name] UNTIL TIME='timestamp';
      ```
 
      其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定备租户名；`timestamp` 为指定的时间戳，单位为纳秒。
@@ -95,7 +95,7 @@
    * 恢复到指定 SCN
 
      ```sql
-     ALTER SYSTEM RECOVER STANDBY [TENANT = tenant_name] UNTIL SCN scn;
+     ALTER SYSTEM RECOVER STANDBY [TENANT = tenant_name] UNTIL SCN=scn;
      ```
 
      其中，仅在使用 `sys` 租户执行命令时，才需要在语句中添加 `TENANT = tenant_name` 参数指定备租户名；`scn` 为指定的 SCN，是一个逻辑的、系统内部的时间戳。
